# WhoWantsToBeAMillionaireGame

RefactorOfRefactor/: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  build.zig  build.zig.zon  meson.build  sdl-build.sh  valgrind.sh  valgrind.supp
RefactorOfRefactor/assets/toml/: animals.toml  art.toml  boardgames.toml  books.toml  cartoon.toml  celebrities.toml  comics.toml  computers.toml  films.toml  gadgets.toml  general.toml  geography.toml  history.toml  maths.toml  music.toml  mythology.toml  nature.toml  otaku.toml  politics.toml  sports.toml  television.toml  theatre.toml  vehicles.toml  videogames.toml
RefactorOfRefactor/cmake/cpptrace/: meson.build
RefactorOfRefactor/cmake/sdl3/: meson.build
RefactorOfRefactor/hdr/: assert.hpp  asset.hpp  bezier.hpp  border.hpp  color.hpp  colors.hpp  countdownevent.hpp  data.hpp  debug.hpp  debug2.hpp  defer.hpp  ellipse.hpp  event.hpp  extensions.hpp  fontmanager.hpp  functionals.hpp  game.hpp  globals.hpp  hexagon.hpp  ingamescene.hpp  invokable.hpp  iscene.hpp  mainmenuscene.hpp  opengl.hpp  option.hpp  optionwrap.hpp  record.hpp  result.hpp  roundedrectangle.hpp  scene.hpp  sceneinterface.hpp  sceneinterfaces.hpp  scenes.hpp  scoreboard.hpp  shader.hpp  textbubble.hpp  texture.hpp  textureregion.hpp  toml.hpp  utility.hpp
RefactorOfRefactor/hdr/glad/: gl.h
RefactorOfRefactor/hdr/seq/: seq.hpp
RefactorOfRefactor/hdr/svl/: SVL.h  SVLConfig.h
RefactorOfRefactor/lib/: dependencies.json  libSDL3.so.0.1.2  libSDL3_image.so.0.0.0  libSDL3_mixer.so.0.0.0  libSDL3_ttf.so.0.0.0
RefactorOfRefactor/meson/wraps/: meson.build
RefactorOfRefactor/shader/: fragment.hlsl  fragment.spirv  vertex.hlsl  vertex.spirv
RefactorOfRefactor/src/: asset.cpp  bezier.cpp  border.cpp  data.cpp  ellipse.cpp  event.cpp  fontmanager.cpp  game.cpp  hexagon.cpp  ingamescene.cpp  main.cpp  mainmenuscene.cpp  opengl.cpp  roundedrectangle.cpp  scene.cpp  scenes.cpp  scoreboard.cpp  shader.cpp  textbubble.cpp  texture.cpp  toml.cpp  utility.cpp
RefactorOfRefactor/subprojects/: cpptrace.wrap  fmt.wrap  freetype2.wrap  glm.wrap  harfbuzz.wrap  libdwarf.wrap  libpng.wrap  sdl3.wrap  sdl3_image.wrap  sdl3_mixer.wrap  sdl3_ttf.wrap  seq.hpp.wrap  svl.wrap
RefactorOfRefactor/subprojects/packagefiles/SDL_mixer/: meson.build
RefactorOfRefactor/subprojects/packagefiles/cpptrace/: meson.build
RefactorOfRefactor/subprojects/packagefiles/fmt/: 0001.patch
RefactorOfRefactor/subprojects/packagefiles/freetype/: 0001.patch
RefactorOfRefactor/subprojects/packagefiles/glm/: meson.build
RefactorOfRefactor/subprojects/packagefiles/harfbuzz/: 0001.patch  0002.patch  0003.patch
RefactorOfRefactor/subprojects/packagefiles/libdwarf/: 0001.patch  0002.patch
RefactorOfRefactor/subprojects/packagefiles/libpng/: 0001.patch  0002.patch
RefactorOfRefactor/subprojects/packagefiles/sdl3/: 0001.patch  0002.patch  meson.build
RefactorOfRefactor/subprojects/packagefiles/sdl3/src/: meson.build
RefactorOfRefactor/subprojects/packagefiles/sdl3_image/: meson.build
RefactorOfRefactor/subprojects/packagefiles/sdl3_mixer/: meson.build
RefactorOfRefactor/subprojects/packagefiles/sdl3_ttf/: meson.build
RefactorOfRefactor/subprojects/packagefiles/svl/: meson.build
RefactorOfRefactor/subprojects/packagefiles/svl/include/svl/: SVLConfig.h
RefactorOfRefactor/tools/: copy_dir.py  main.py  refresh_packagefiles.py  requirements.txt
RemasteredGame/: Makefile  main.cpp
RemasteredGame/graphics/: Hexa.cpp  Hexa.hpp  Makefile  Primitive.cpp  Triangle.hpp  Window.cpp  Window.hpp  area.cpp  main.cpp  measurements.txt
RemasteredGame/headers/: CategoryChance.hpp  Data.hpp  DrawableScene.hpp  Enumeration.hpp  Event.hpp  Game.hpp  GameLoop.hpp  GameView.hpp  Hexa.hpp  InGameScene.hpp  Line.hpp  MainMenuScene.hpp  NewGame.hpp  Primitive.hpp  Quad.hpp  Scene.hpp  Triangle.hpp  Window.hpp  WindowProperties.hpp
RemasteredGame/sources/: CategoryChance.cpp  Data.cpp  DrawableScene.cpp  Enumeration.cpp  Event.cpp  Game.cpp  GameLoop.cpp  GameView.cpp  Hexa.cpp  InGameScene.cpp  Line.cpp  MainMenuScene.cpp  NewGame.cpp  Primitive.cpp  Quad.cpp  Scene.cpp  Triangle.cpp  Window.cpp  WindowProperties.cpp
RemasteredGame/text/: art.txt  astronomy.txt  food.txt  geography.txt  history.txt  holidays.txt  literature.txt  music.txt  nature.txt  other.txt  proverbs.txt  series.txt  sports.txt  tabloid.txt  theatre.txt  transport.txt
WhoWantsToBeAMillionaireGameApp/: Makefile  WhoWantsToBeAMillionaireGameApp.sln
WhoWantsToBeAMillionaireGameApp/WhoWantsToBeAMillionaireGameApp/: WhoWantsToBeAMillionaireGameApp.vcxproj  WhoWantsToBeAMillionaireGameApp.vcxproj.filters  main.cpp
WhoWantsToBeAMillionaireGameApp/WhoWantsToBeAMillionaireGameApp/headers/: adatok.h  jatekciklus.h  kerdesekvalaszok.h  megjelenites.h  resource.h  segitsegek.h
WhoWantsToBeAMillionaireGameApp/WhoWantsToBeAMillionaireGameApp/resources/: SDL.rc
WhoWantsToBeAMillionaireGameApp/WhoWantsToBeAMillionaireGameApp/sources/: beolvasas.cpp  egergomb.cpp  egerpoz.cpp  inicializalas.cpp  kepernyo_rendereles.cpp  kerdes_valaszto.cpp  kerdesekvalaszok.cpp  kovkerdes.cpp  megjelenites.cpp  segitsegek.cpp  terminacio.cpp  ujjatek.cpp
WhoWantsToBeAMillionaireGameApp/WhoWantsToBeAMillionaireGameApp/text/: art.txt  astronomy.txt  food.txt  geography.txt  history.txt  holidays.txt  literature.txt  music.txt  nature.txt  other.txt  proverbs.txt  series.txt  sports.txt  tabloid.txt  theatre.txt  transport.txt
WhoWantsToBeAMillionaireGameApp/WhoWantsToBeAMillionaireGameApp/x64/Debug/: SDL.res  WhoWantsToBeAMillionaireGameApp.exe.recipe  WhoWantsToBeAMillionaireGameApp.ilk  vc143.idb
WhoWantsToBeAMillionaireGameApp/WhoWantsToBeAMillionaireGameApp/x64/Debug/WhoWants.57fd1b43.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WhoWantsToBeAMillionaireGameApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
